Add find users endpoint
