# swagger-jira-client.yaml
@@ -10,6 +10,58 @@ tags:
 schemes: 
     - "https"
 paths:
+    /user/search:
+        get:
+            summary: "Returns a list of users that match the search string. This resource cannot be accessed anonymously."
+            operationId: "Find users"
+            tags:
+              - jira
+            security:
+              - crowdAuth: []
+            consumes:
+            - "application/json"
+            produces:
+            - "application/json"
+            parameters:
+            - name: "username"
+              in: "query"
+              description: "A query string used to search username, name or e-mail address"
+              type: "string"
+              required: true 
+            - name: "startAt"
+              in: "query"
+              description: "the index of the first user to return (0-based)"
+              type: "integer"
+              required: false
+              default: 0
+            - name: "maxResults"
+              in: "query"
+              description: "the maximum number of users to return (defaults to 50). The maximum allowed value is 1000. If you specify a value that is higher than this number, your search results will be truncated."
+              type: "integer"
+              required: false
+              default: 50 
+            - name: "includeActive"
+              in: "query"
+              description: ""
+              type: "boolean"
+              required: false
+              default: true
+            - name: "includeInactive"
+              in: "query"
+              description: ""
+              type: "boolean"
+              required: false
+              default: false 
+            responses:
+              200:
+                description: "Returns a full representation of a JIRA user in JSON format."
+                schema:
+                  type: "array"
+                  items:
+                    $ref: '#/definitions/JiraUser'
+              400:
+                description: "Returned if the requested user is not found."
+
     /issue:
         post:
             summary: "Creates an issue or a sub-task from a JSON representation"
@@ -83,6 +135,17 @@ securityDefinitions:
       type: basic
 
 definitions:
+    JiraUser:
+        type: "object"
+        properties:
+            self:
+                type: "string"
+            name:
+                type: "string"
+            displayName:
+                type: "string"
+            active:
+                type: "boolean"
     JiraCreatedIssue:
         type: "object"
         properties:
